--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>glom-web</title>
   </head>
   <body>
-    <app></app>
-    <!-- built files will be auto injected -->
+    <App></App>
   </body>
 </html>
